# termux

./: .coveragerc  .gitignore  .isort.cfg  .travis.yml  AUTHORS.rst  CHANGELOG.rst  LICENSE.txt  README.rst  WORK.rst  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst
docs/api/: modules.rst  termux.rst
src/termux/: __init__.py  audio_info.py  battery_status.py  brightness.py  camera_info.py  camera_photo.py  clipboard.py  contact_list.py  download.py  fix_shebang.py  location.py  skeleton.py
tests/: conftest.py  test_audio_info.py  test_battery_status.py  test_brightness.py  test_camera_info.py  test_location.py  test_skeleton.py
