[metadata]
name = termux
description = Termux Api In Python
author = Ublim
author-email = ublimjo@gmail.com
license = mit
url = http://github.com/Ublimjo/termux
long-description = file: README.rst
platforms = Termux, Linux
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
setup_requires =
    pyscaffold>=3.0a0,<3.1a0
# install_requires = numpy; scipy
install_requires = commands
tests_require = pytest; pytest-cov

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]

[options.entry_points]

[test]
addopts = tests

[tool:pytest]
addopts =
    --cov termux --cov-report html
    --verbose
norecursedirs =
    dist
    build
    .tox

[aliases]
release = sdist bdist_wheel upload

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[flake8]
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
version = 3.0.3.post0.dev61+ge5fed5a.dirty
package = termux
extensions =
    tox
    travis
